# fastman-cli

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  index.html  output.txt  pyproject.toml  refactor.py  requirements.txt  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: deploy.yml  publish.yml
.history/: CHANGELOG_20260310014837.md
.history/docs/docs/: intro_20260310014643.md  whats-new_20260310014643.md
assets/css/: styles.8a876a92.css  styles.cefd3899.css  styles.ec904c51.css  styles.f4de9a77.css
assets/js/: 05b1795e.0fe380a0.js  05b1795e.12f43711.js  05b1795e.17247af6.js  05b1795e.2aeab60e.js  05b1795e.686b342f.js  05b1795e.69334b6b.js  05b1795e.c4e29684.js  0c7d1114.0ee851b5.js  0c7d1114.b17fb8ae.js  0c7d1114.c5694a51.js  0c7d1114.ebcc52ff.js  0c7d1114.ec23c70c.js  0dffb83e.3690405e.js  0dffb83e.90ce7ab4.js  0e384e19.0cd1b8a0.js  0e384e19.108b43b8.js  0e384e19.109bd6ed.js  0e384e19.1739fceb.js  0e384e19.1cc880ca.js  0e384e19.2a1d7114.js  0e384e19.6f3b04e0.js  0e384e19.786c5f75.js  0e384e19.86e4b813.js  0e384e19.8cb22934.js  0e384e19.a8d42829.js  0e384e19.f8d469d2.js  1031.b3619fb9.js  1301.12199ebf.js  1513.979f14de.js  165.d9d8256b.js  1679.5e41c474.js  17896441.5c5ae6b7.js  17896441.6b4ffd31.js  1795.d6d5a9b0.js  1844.1bb7fd50.js  1df93b7f.0b04710e.js  1df93b7f.0d22b3ab.js  1df93b7f.2e673d40.js  1df93b7f.3456c580.js  1df93b7f.4d3ed730.js  (+233 more)
docs/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/advanced/custom-commands/: index.html
docs/advanced/production-build/: index.html
docs/advanced/tinker/: index.html
docs/commands/database/: index.html
docs/commands/project/: index.html
docs/commands/scaffolding/: index.html
docs/commands/utilities/: index.html
docs/concepts/architecture/: index.html
docs/concepts/authentication/: index.html
docs/concepts/database/: index.html
docs/concepts/examples/: index.html
docs/deployment/: index.html
docs/docs/: deployment.md  installation.md  intro.md  roadmap.md  whats-new.md
docs/docs/advanced/: tinker.md  (+2 more)
docs/installation/: index.html
docs/intro/: index.html
docs/roadmap/: index.html
docs/static/: robots.txt
docs/whats-new/: index.html
examples/pizza-order/: .gitignore  README.md  main.py  pyproject.toml
examples/pizza-order/alembic/: env.py
examples/pizza-order/app/: main.py
examples/pizza-order/app/core/: config.py  database.py  discovery.py  graphql.py  logging.py
examples/pizza-order/app/features/orders/: models.py  router.py  schemas.py  service.py
examples/pizza-order/app/models/: __init__.py
markdown-page/: index.html
src/fastman/: __init__.py  __main__.py  cli.py  console.py  injection.py  main.py  shell_completion.py  templates.py  update.py  utils.py
tests/: test_commands.py  test_console.py  test_injection.py  test_integration.py  test_polish.py  test_update.py  test_utils.py
tutorial/: README.md
(+55 files in other folders)
